Update Get All Merchant With Address and Price Tier ID(For Ton)
