# TCCPOS.Backend.InventoryService.WebApi/InventoryServiceSwagger.json
@@ -901,6 +901,58 @@
       }
     },
     "/api/v1/Orders": {
+      "get": {
+        "tags": [
+          "Orders"
+        ],
+        "summary": "Get All order by Merchant",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrderByIdResult"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrderByIdResult"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrderByIdResult"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/FailedResult"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FailedResult"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FailedResult"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
       "post": {
         "tags": [
           "Orders"
@@ -2909,6 +2961,10 @@
             "nullable": true
           },
           "shop_address_id": {
+            "type": "string",
+            "nullable": true
+          },
+          "price_tier_id": {
             "type": "string",
             "nullable": true
           }
